Git ignore and updated README

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-# Created by .ignore support plugin (hsz.mobi)
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
+.idea/
+*.iws
+out/
+.idea_modules/
+*.class
+*.log
